Generalized everything, removed ghooks, added join